--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -29,5 +29,13 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Intro Page
             </NavLink>
         </div>
+
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Profile">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Profile
+            </NavLink>
+        </div>
+
     </nav>
 </div>
